Use large max heap size for build process and increment multidex support dependency to 1.0.1

--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,10 @@ android {
     }
     dexOptions {
         jumboMode true
+        incremental true javaMaxHeapSize “4g”
     }
 }
 
 dependencies {
-  compile 'com.android.support:multidex:1.0.0'
+  compile 'com.android.support:multidex:1.0.1'
 }
