Fix build.gradle options

--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,8 @@ android {
     }
     dexOptions {
         jumboMode true
-        incremental true javaMaxHeapSize “4g”
+        incremental true 
+	javaMaxHeapSize “4g”
     }
 }
 
